11710123_project2/test/test_11710123_2.spl
// type 2
int main(){
    helloworld(1);
    return 1;
}